chore: set Java 17 as source and target
Signed-off-by: manticore-projects <andreas@manticore-projects.com>